@@ -205,9 +205,9 @@ init_alloc(void)
 	GC_all_interior_pointers = 0;
 	GC_time_limit = GC_TIME_UNLIMITED;
 	GC_init();
-#ifdef GBC_BOEHM_GENGC
-	GC_enable_incremental();
-#endif
+	if (ecl_get_option(ECL_INCREMENTAL_GC)) {
+		GC_enable_incremental();
+	}
 	GC_register_displacement(1);
 #if 0
 	GC_init_explicit_typing();
