@@ -351,9 +351,9 @@ si_load_binary(cl_object filename, cl_object verbose, cl_object print)
 	/* A full garbage collection enables us to detect unused code
 	   and leave space for the library to be loaded. This is only
 	   required when we use the dlopen wrappers. */
-#ifndef GBC_BOEHM_GENGC
-	si_gc(Ct);
-#endif
+	if (!ecl_get_option(ECL_INCREMENTAL_GC)) {
+		si_gc(Ct);
+	}
 
 	/* We need the full pathname */
 	filename = cl_namestring(cl_truename(filename));
