@@ -1244,8 +1244,7 @@ cl_symbols[] = {
 {SYS_ "LOOKUP-HOST-ENTRY", SI_ORDINARY, si_lookup_host_entry, 1, OBJNULL},
 #endif
 
-{SYS_ "CATCH-BAD-SIGNALS", SI_ORDINARY, si_catch_bad_signals, 0, OBJNULL},
-{SYS_ "UNCATCH-BAD-SIGNALS", SI_ORDINARY, si_uncatch_bad_signals, 0, OBJNULL},
+{SYS_ "CATCH-SIGNAL", SI_ORDINARY, si_catch_signal, 2, OBJNULL},
 
 /* KEYWORD PACKAGE */
 {KEY_ "ADJUSTABLE", KEYWORD, NULL, -1, OBJNULL},
@@ -1708,7 +1707,9 @@ cl_symbols[] = {
 {EXT_ "BINDING-STACK", SI_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "FRAME-STACK", SI_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "LISP-STACK", SI_ORDINARY, NULL, -1, OBJNULL},
+{EXT_ "C-STACK", SI_ORDINARY, NULL, -1, OBJNULL},
 {EXT_ "SET-STACK-SIZE", SI_ORDINARY, si_set_stack_size, 2, OBJNULL},
+{EXT_ "SEGMENTATION-VIOLATION", SI_ORDINARY, NULL, -1, OBJNULL},
 
 /* Tag for end of list */
 {NULL, CL_ORDINARY, NULL, -1, OBJNULL}};
